--- a/app/src/main/res/navigation/nav_news_graph.xml
+++ b/app/src/main/res/navigation/nav_news_graph.xml
@@ -3,22 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_news_graph"
-    app:startDestination="@id/headlineFragment">
+    app:startDestination="@id/headlinesFragment">
 
     <fragment
-        android:id="@+id/headlineFragment"
+        android:id="@+id/headlinesFragment"
         android:name="com.example.newsappproject.fragments.HeadlineFragment"
         android:label="fragment_headline"
         tools:layout="@layout/fragment_headline" >
         <action
-            android:id="@+id/action_headlineFragment_to_articleFragment"
+            android:id="@+id/action_headlinesFragment_to_articleFragment"
             app:destination="@id/articleFragment" />
-        <action
-            android:id="@+id/action_headlineFragment_to_favouriteFragment"
-            app:destination="@id/favouritesFragment" />
-        <action
-            android:id="@+id/action_headlineFragment_to_searchFragment"
-            app:destination="@id/search2Fragment" />
     </fragment>
 
     <fragment
@@ -39,12 +33,9 @@
         <action
             android:id="@+id/action_favouriteFragment_to_articleFragment"
             app:destination="@id/articleFragment" />
-        <action
-            android:id="@+id/action_favouriteFragment_to_headlineFragment"
-            app:destination="@id/headlineFragment" />
-        <action
-            android:id="@+id/action_favouriteFragment_to_searchFragment"
-            app:destination="@id/search2Fragment" />
+<!--        <action-->
+<!--        android:id="@+id/action_favouriteFragment_to_headlinesFragment"-->
+<!--        app:destination="@id/headlinesFragment" />-->
     </fragment>
     <fragment
         android:id="@+id/search2Fragment"
@@ -54,11 +45,30 @@
         <action
             android:id="@+id/action_searchFragment_to_articleFragment"
             app:destination="@id/articleFragment" />
-
-        <action
-            android:id="@+id/action_searchFragment_to_headlineFragment"
-            app:destination="@id/headlineFragment" />
-
+<!--        <action-->
+<!--        android:id="@+id/action_searchFragment_to_headlinesFragment"-->
+<!--        app:destination="@id/headlinesFragment" />-->
     </fragment>
 
 </navigation>
+
+<!--<action-->
+<!--android:id="@+id/action_headlineFragment_to_favouriteFragment"-->
+<!--app:destination="@id/favouritesFragment" />-->
+<!--<action-->
+<!--android:id="@+id/action_headlineFragment_to_searchFragment"-->
+<!--app:destination="@id/search2Fragment" />-->
+
+
+<!--<action-->
+<!--android:id="@+id/action_favouriteFragment_to_headlineFragment"-->
+<!--app:destination="@id/headlineFragment" />-->
+<!--<action-->
+<!--android:id="@+id/action_favouriteFragment_to_searchFragment"-->
+<!--app:destination="@id/search2Fragment" />-->
+
+
+<!--<action-->
+<!--android:id="@+id/action_searchFragment_to_headlineFragment"-->
+<!--app:destination="@id/headlineFragment" />-->
+
